# Parser-script-TestTask

./: README.md  database_sample.ini  pyproject.toml  scrapy.cfg
bank_parser/: database_sample.ini  items.py  middlewares.py  pipelines.py  psql_ops.py  settings.py
bank_parser/spiders/: banks_spider.py
src/tutorial/: banks-search.html
src/tutorial/tutorial/: config.py
src/tutorial/tutorial/spiders/: banks_spider.py  quotes_spider.py
tutorial/: psql_ops.py
tutorial/spiders/: banks_spider.py
