[tool.poetry]
name = "parser-script-testtask"
version = "0.1.0"
description = ""
authors = ["DanilaLabydin <labydin2605@mail.ru>"]
readme = "README.md"
packages = [{include = "parser_script_testtask"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.10.0"
twisted = "22.10.0"


[tool.poetry.group.dependencies.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
